<resources>
    <string name="app_name">M-Office Buy</string>
    <string name="passcode">Enter Passcode</string>
    <string name="role">Select Your Role</string>
    <string name="name">Name</string>
    <string name="company_contact">Contact</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="country">Country</string>
    <string name="zip_code">Zip Code</string>
    <string-array name="role_spinner">
        <item>Buyer</item>
        <item>Seller</item>
    </string-array>
    <string name="trans_img">image</string>
    <string name="email">E-Mail ID</string>
    <string name="internet_error">Please Check your Internet Connection</string>
    <string name="roletext">Role</string>
    <string name="tryagain">Try Again</string>
    <string name="settings_nav">Go To Settings</string>
    <string name="url">URL</string>
    <string name="street">Street</string>
    <string name="first_name">first name</string>
    <string name="last_name">Last Name</string>
</resources>
