<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="2"
    tools:ignore="MissingPrefix"
    android:orientation="vertical"
    android:background="@drawable/splash"
    tools:context="in.codehex.office.NetworkActivity">

    <ImageView
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@drawable/connectionerror"/>
    <LinearLayout
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="1dp">
        <TextView
            fontPath="fonts/latoregular.ttf"
            android:textColor="@color/accent"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/internet_error"/>
        <Button
            fontPath="fonts/latoregular.ttf"
            android:background="@color/accent"
            android:id="@+id/settings_button"
            android:layout_margin="@dimen/primary_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@drawable/button_text_color"
            android:text="@string/settings_nav"/>
        <Button
            android:textColor="@drawable/button_text_color"
            fontPath="fonts/latoregular.ttf"
            android:background="@color/accent"
            android:id="@+id/try_again_button"
            android:layout_margin="@dimen/primary_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tryagain"/>


    </LinearLayout>

</LinearLayout>
